# Freycoin

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  Makefile.am  README.md  configure.ac  libbitcoinconsensus.pc.in  libriecoinkernel.pc.in  vcpkg.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
build_msvc/: bitcoin_config.h
ci/lint/: 01_install.sh  04_install.sh  06_script.sh
ci/test/: 00_setup_env.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_qt5.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  01_base_install.sh  02_run_container.py  02_run_container.sh  03_test_script.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
cmake/: bitcoin-build-config.h.in  windows-app.manifest.in
cmake/module/: GenerateSetupNsi.cmake  Maintenance.cmake
contrib/: README.md  gitian-build.py  riecoin-cli.bash-completion  riecoin-tx.bash-completion  riecoind.bash-completion
contrib/debian/: copyright
contrib/devtools/: README.md  copyright_header.py  gen-bitcoin-conf.sh  gen-manpages.py  gen-riecoin-conf.sh  headerssync-params.py  test_deterministic_coverage.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/guix/: INSTALL.md  README.md  guix-build  guix-build.sh  manifest.scm
contrib/init/: README.md  bitcoind.conf  bitcoind.openrc  bitcoind.openrcconf  bitcoind.service  riecoind.init  riecoind.openrc  riecoind.service
contrib/linearize/: example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/qos/: tc.sh
contrib/seeds/: README.md  generate-seeds.py  nodes_main.txt  nodes_test.txt
contrib/testgen/: gen_key_io_test_vectors.py
depends/: Makefile  README.md  config.site.in  description.md  funcs.mk
doc/: README_windows.txt
doc/man/: riecoin-cli.1  riecoin-qt.1  riecoin-tx.1  riecoin-wallet.1  riecoin.1  riecoind.1
share/: setup.nsi.in
share/examples/: riecoin.conf
share/qt/: Info.plist.in  translate.cmake
share/rpcauth/: rpcauth.py
src/: CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  amount.h  arith_uint256.h  bech32.cpp  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  core_io.h  core_read.cpp  deploymentinfo.cpp  deploymentinfo.h  (+42 more)
src/bench/: CMakeLists.txt  addrman.cpp  duplicate_inputs.cpp  rpc_blockchain.cpp  wallet_loading.cpp
src/common/: args.cpp  args.h  netif.cpp  run_command.cpp  settings.cpp  signmessage.cpp  system.cpp  system.h
src/consensus/: amount.h  blacklist.h  consensus.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/gpu/: CMakeLists.txt  cuda_fermat.h  cuda_fermat_driver.cpp  embed_binary.cmake  fermat.cl  fermat.cu  fermat.ptx  fermat_cl_source.h  fermat_metal.metal  fermat_ptx_source.h  gpu_fermat.cpp  gpu_fermat.h  metal_fermat.h  metal_fermat.mm  opencl_fermat.cpp  opencl_loader.h
src/index/: coinstatsindex.cpp
src/init/: common.cpp
src/interfaces/: chain.cpp  chain.h  mining.h  node.h  wallet.h
src/ipc/: CMakeLists.txt
src/kernel/: CMakeLists.txt  chainparams.cpp  chainparams.h  checkpointdata.h  notifications_interface.h  riecoinkernel.cpp  riecoinkernel_wrapper.h
src/node/: blockstorage.cpp  blockstorage.h  chainstate.cpp  context.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  miner.cpp  miner.h  protocol_version.h  warnings.cpp
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h
src/pow/: avx512_primality.cpp  combined_sieve.cpp  mining_engine.cpp  mining_engine.h  pow.cpp  pow.h  pow_common.h  pow_utils.cpp  pow_utils.h  simd_presieve.cpp  simd_presieve.h
src/primitives/: block.cpp  block.h
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bitcoin.cpp  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  createwalletdialog.cpp  createwalletdialog.h  editaddressdialog.cpp  generatecodedialog.cpp  generatecodedialog.h  guiconstants.h  guiutil.cpp  intro.cpp  intro.h  main.cpp  miningpage.cpp  miningpage.h  miningpage.ui  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  (+41 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  external_signer.cpp  mempool.cpp  mining.cpp  misc.cpp  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  register.h  server.cpp  server.h  server_util.cpp  signmessage.cpp  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  signingprovider.h  standard.h
src/test/: CMakeLists.txt  addrman_tests.cpp  amount_tests.cpp  argsman_tests.cpp  bip324_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  blockmanager_tests.cpp  bloom_tests.cpp  coinstatsindex_tests.cpp  compress_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  difficulty_adjustment_tests.cpp  fs_tests.cpp  getarg_tests.cpp  headers_sync_chainwork_tests.cpp  key_io_tests.cpp  key_tests.cpp  main.cpp  merkleblock_tests.cpp  miner_tests.cpp  net_peer_connection_tests.cpp  (+15 more)
test/: README.md  config.ini.in
(+294 files in other folders)
